Set userPattern as raw string

--- a/main.ipynb
+++ b/main.ipynb
@@ -182,7 +182,7 @@
     "    \n",
     "    # Defining regex patterns.\n",
     "    urlPattern        = r\"((http://)[^ ]*|(https://)[^ ]*|( www\\.)[^ ]*)\"\n",
-    "    userPattern       = '@[^\\s]+'\n",
+    "    userPattern       = r'@[^\\s]+'\n",
     "    alphaPattern      = \"[^a-zA-Z0-9]\"\n",
     "    sequencePattern   = r\"(.)\\1\\1+\"\n",
     "    seqReplacePattern = r\"\\1\\1\"\n",
